--- a/css/style.scss
+++ b/css/style.scss
@@ -2,5 +2,24 @@
 
 @import '_normalize';
 
-//add media query
 @import '_mobile';
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    @import '_mobile';
+  }
+  
+  @media screen and (min-width: 1280px) {
+    @import '_desktop';
+  }
+  
+  // Tablet in portrait mode
+  @media screen and (min-width: 768px) and (max-width: 1279px) and (orientation: portrait) {
+    @import '_mobile';
+  
+  }
+  
+  // Tablet in landscape mode
+  @media screen and (min-width: 768px) and (max-width: 1367px) and (orientation: landscape) {
+    @import '_desktop';
+    @import '_tablet';
+  } 
